[package]
name = "charta-compiler"
version = "0.1.0"
edition = "2021"
description = "Charta compiler - textual syntax to IR"
license = "MIT OR Apache-2.0"

[[bin]]
name = "charta"
path = "src/main.rs"

[dependencies]
charta-core = { path = "../charta-core" }
charta-vm = { path = "../charta-vm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logos = "0.14"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
rstest = "0.18"
